--- a/test.css
+++ b/test.css
@@ -1,25 +1,23 @@
-#logo{
-    width: 50%;
-   text-align: center;
+#logo {
+    width: 75%;
 }
 
-p{
+p {
     text-align: center;
     font-family: 'Comfortaa', cursive;
 }
 
-#form{ 
-   
+#form {
     padding: 1%;
-    font-size: 50px;
+    font-size: 3.5vw;
     border-radius: 50px;
-    border:solid rgb(255, 177, 232);
+    border: solid rgb(255, 177, 232);
     z-index: 4;  
-    width:100%
+    width: 100%
 }
 
-#form input{
-    font-size: 25px;
+#form input {
+    font-size: 2vw;
     text-align: center;
     margin-left: 21%;
     border:solid rgb(170, 170, 170);
@@ -28,65 +26,65 @@ p{
     Justify-content: center;
     align-items: center;
     width:25%;
-    
 }
 
- #form button{
-        font-size: 30px;
-        width: 20%;
-        margin-left: 40%;
-        margin-top: 5%;
-        border-radius: 15px;
-        box-shadow: 4px 4px rgb(206, 85, 144);
-        background-color: rgb(255, 199, 240);
+#boton {
+    font-size: 2vw;
+    width: 20%;
+    margin-left: 40%;
+    margin-top: 5%;
+    border-radius: 15px;
+    box-shadow: 4px 4px rgb(206, 85, 144);
+    background-color: rgb(255, 199, 240);
 }
 
-#fondo{
+/*
+#fondo {
     width: 100%;
     position:absolute;
     z-index: 2;
     top: 0px;
 }
+*/
 
-#todo{z-index: 4;
+#todo {
+    z-index: 4;
     position: absolute;
     width: 80%;
     position: absolute;
     left: 10% ;
-
 }
 
-#resultado{
+#resultado {
     margin-top: 5%;
-    font-size: 50px;
+    font-size: 3.5vw;
     text-align: center;
-
 }
 
-body{
+body {
     width: 100%;
     height: 100%;
     overflow-x: hidden;
     padding: 0px;
     margin: 0px;
     background: url("img/corazones.gif") left repeat-y, url("img/corazones.gif") right repeat-y;
-    background-size: 100px;
+    background-size: 10%;
     overflow-y: scroll;
-    
 }
 
 
-#nom1{
+#nom1 {
     position: absolute;
     left:-4%;
     right: 40%;
 }
 
-#nom2{
+#nom2 {
     position: absolute;
     right: -10%;
     left: 40%;
 }
+
 
 /** para movil*/ 
 
